@@ -80,3 +80,4 @@
 # 20240519
 - Send release message to the jailed channel without mentioning member
 - Fix view command indention issue
+- Re-jail the prisoners who left the guild
